# atlas-vox

./: .archon_project.json  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMPETITIVE_ANALYSIS_REPORT.md  E2E_TEST_IMPLEMENTATION.md  Makefile  README.md  TASKS.md  claude-progress.txt  features.json
backend/: README.md  alembic.ini  atlas_vox.db-shm  atlas_vox.db-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_system_settings.py
backend/app/: __init__.py  main.py
backend/app/agent_bridge/: __init__.py  client.py  tools.py
backend/app/cli/: main.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  enums.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/healing/: __init__.py  detector.py  endpoints.py  engine.py  mcp_bridge.py  models.py  monitors.py  remediation.py  schemas.py
backend/app/mcp/: server.py  tools.py  transport.py
backend/app/models/: __init__.py  api_key.py  audio_sample.py  clone_consent.py  model_version.py  persona_preset.py  preference_summary.py  pronunciation_entry.py  provider.py  synthesis_feedback.py  synthesis_history.py  system_setting.py  training_job.py  usage_event.py  voice_favorite.py  voice_fingerprint.py  voice_profile.py  webhook.py
backend/app/providers/: azure_auth.py  azure_speech.py  base.py  coqui_xtts.py  cosyvoice.py  dia.py  dia2.py  elevenlabs.py  kokoro_tts.py  piper_tts.py  remote_provider.py  styletts2.py
backend/app/schemas/: __init__.py  admin.py  api_key.py  audio_tools.py  feedback.py  preset.py  profile.py  provider.py  quality.py  sample.py  synthesis.py  training.py  webhook.py
backend/app/services/: audio_concat.py  audio_enhancement.py  audio_processor.py  audio_quality.py  audio_watermark.py  audiobook_stitcher.py  comparison_service.py  consent_service.py  context_router.py  cost_estimator.py  eval_phrases.py  feedback_service.py  markdown_to_ssml.py  phoneme_coverage.py  preference_aggregator.py  profile_service.py  pronunciation_service.py  prosody_preview.py  provider_registry.py  quality_dashboard.py  regression_detector.py  sample_recommender.py  ssml_sanitizer.py  storage_cleanup.py  synthesis_service.py  system_settings_service.py  text_chunking.py  text_preprocessor.py  training_service.py  voice_fingerprinter.py  webhook_dispatcher.py  whisper_transcriber.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_healing.py
gpu-service/: README.md  pyproject.toml
gpu-service/app/: config.py  gpu_manager.py  main.py  router.py
gpu-service/scripts/: download_models.py  install-service.bat  install.bat  start.bat  start.ps1
(+486 files in other folders)
