[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-vox"
version = "0.1.0"
description = "Intelligent Voice Training & Customization Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "sqlalchemy[asyncio]~=2.0",
    "aiosqlite~=0.20.0",
    "alembic~=1.13.0",
    "structlog>=24.1.0",
    "httpx~=0.27.0",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]~=2.8.0",
    "argon2-cffi~=23.1.0",
    "celery[redis]~=5.3.0",
    "redis~=5.0.0",
    "pydub>=0.25.1",
    "typer[all]~=0.12.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "slowapi>=0.1.9",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]
audio = [
    "noisereduce>=3.0.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
gpu = [
    "torch>=2.1.0",
]

[project.scripts]
atlas-vox = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "B904", "B008", "A002", "SIM105", "SIM108", "SIM103"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/providers/data/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
